# config/routes.rb
@@ -4,6 +4,14 @@ Rails.application.routes.draw do
   # Defines the root path route ("/")
   # root "articles#index"
 
+  post 'login', to: 'sessions#create'
   resources :members
+  resources :payment_methods, only: [:index, :show]
+  resources :membership_plans, only: [:index, :show]
+  resources :membership_statuses, only: [:index, :show]
+
+  resources :payments
+  resources :usage_histories
+  resources :equipment_reservations  
   
 end
